fixed spacing for accordian

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -76,3 +76,6 @@
     color: #00AB55
 }
 
+.space {
+    margin-bottom: .5em
+}
